undo changing of getfrist and getlast